# order-info-page

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.Docker.md  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1c9b8a4768ea_added_order_and_product_tables.py  1f274bebdaaa_add_order_and_product_tables.py  2a65839f7830_added_order_and_product_tables.py
app/: config.py  database.py  main.py  utils.py
app/models/: __init__.py  base.py  order.py  product.py
app/repositories/: base.py  sqlalchemy.py
app/routers/: __init__.py  deps.py  orders.py
app/schemas/: order.py  product.py
app/services/: base.py  order.py
templates/: empty.html  order.html
